--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "codegen": "graphql-codegen -c wannabes.yml"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
@@ -21,8 +20,7 @@
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
-    "react-masonry-css": "^1.0.16",
-    "react-tooltip": "^5.28.0"
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
