--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/serve": "^2.13.1",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
+    "classnames": "^2.5.1",
     "graphql-request": "^7.1.2",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
