--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint:fix": "eslint --fix --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint ."
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
@@ -27,6 +28,7 @@
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-masonry-css": "^1.0.16",
+    "tiny-invariant": "^1.3.3",
     "yet-another-react-lightbox": "^3.21.6"
   },
   "devDependencies": {
