--- a/package.json
+++ b/package.json
@@ -16,18 +16,26 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@radix-ui/react-slot": "^1.1.2",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "graphql-request": "^7.1.2",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.485.0",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-masonry-css": "^1.0.16",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
     "yet-another-react-lightbox": "^3.21.6"
   },
